fix(storages.cold-archive): avoid select box width change
ref: MANAGER-11136

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
@@ -66,8 +66,11 @@
                     </div>
                 </oui-select>
                 <oui-spinner
-                    data-ng-if="$ctrl.userModel.linkedMode.isInProgress"
-                    size="s"
+                    data-ng-class="{
+                            'visible': $ctrl.userModel.linkedMode.isInProgress,
+                            'invisible': !$ctrl.userModel.linkedMode.isInProgress
+                        }"
+                    data-size="s"
                 ></oui-spinner>
             </div>
         </oui-field>
