feat(generator): add apiv6 requests
ref: MANAGER-11306

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/packages/manager/core/generator/app/conditional-templates/listing/index.tsx.hbs
+++ b/packages/manager/core/generator/app/conditional-templates/listing/index.tsx.hbs
@@ -9,11 +9,11 @@ import {
   useLoaderData,
 } from 'react-router-dom';
 
-import { get{{pascalCase listingEndpoint}} } from '@/api';
+import { {{listingEndpoint}} } from '@/api';
 
 export function loader() {
   return defer({
-    services: get{{pascalCase listingEndpoint}}(),
+    services: {{listingEndpoint}}(),
   });
 }
 
