--- a/packages/manager/core/generator/app/templates/src/api/index.ts.hbs
+++ b/packages/manager/core/generator/app/templates/src/api/index.ts.hbs
@@ -1,3 +1,3 @@
 {{#each apiV6Endpoints}}
-export * from './{{this.filepathFromIndexWithoutExtension}}';
+export * from './{{uppercase @key}}/apiv6/services';
 {{/each}}
