fix(dedicated): resolve src issue
ref: DTRSD-112004

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/modules/vrack/src/partials/actions.html
+++ b/packages/manager/modules/vrack/src/partials/actions.html
@@ -2,7 +2,7 @@
     class="vrack__mapper-icon"
     data-ng-show="!$ctrl.loaders.init"
     alt
-    src="{{:: $ctrl.arrowIcon }}"
+    data-ng-src="{{:: $ctrl.arrowIcon }}"
 />
 
 <div data-ng-if="$ctrl.isAdding()">
