--- a/packages/manager/core/generator/app/conditional-templates/listing/index.tsx.hbs
+++ b/packages/manager/core/generator/app/conditional-templates/listing/index.tsx.hbs
@@ -47,7 +47,7 @@ export default function Listing() {
                 <ul>
                   {services.map((serviceName: string) => (
                     <li key={serviceName}>
-                      <Link to={`/details/${serviceName}`}>{serviceName}</Link>
+                      <Link to={`/dashboard/${serviceName}`}>{serviceName}</Link>
                     </li>
                   ))}
 
