--- a/packages/manager/core/generator/app/conditional-templates/onboarding/index.tsx.hbs
+++ b/packages/manager/core/generator/app/conditional-templates/onboarding/index.tsx.hbs
@@ -2,7 +2,7 @@ import React from 'react';
 import { useTranslation } from 'react-i18next';
 
 export default function Onboarding() {
-  const { t } = useTranslation('{{appName}}');
+  const { t } = useTranslation('{{appName}}/onboarding');
 
   return (
     <div>
