feat: add partners to order funnel
DATATR-260

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/app-configuration.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/app-configuration.html
@@ -121,7 +121,7 @@
     ></span>
 </div>
 
-<div class="mb-4" ng-if="!$ctrl.appModel.preset.partner">
+<div class="mb-4" data-ng-if="$ctrl.appModel.image.isCustom">
     <oui-field
         data-label="{{:: 'pci_app_add_settings_port' | translate}}"
         data-help-text="{{:: 'pci_app_add_settings_port_help' | translate}}"
