--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/app-image.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/app-image.html
@@ -1,70 +1,136 @@
-<div class="container-fluid px-0">
+<!-- Image type -->
+<div class="row">
+    <oui-select-picker
+        class="d-inline-block col-md-6 col-xl-3 my-3"
+        data-name="imageType"
+        data-model="$ctrl.showAdvancedImage"
+        data-label="{{ :: 'pci_app_submit_select_image_tile_custom_label' | translate}}"
+        data-description="{{ :: 'pci_app_submit_select_image_tile_custom_description' | translate}}"
+        data-values="[true]"
+    >
+    </oui-select-picker>
+    <oui-select-picker
+        class="d-inline-block col-md-6 col-xl-3 my-3"
+        name="imageType"
+        data-model="$ctrl.showAdvancedImage"
+        data-label="{{ :: 'pci_app_submit_select_image_tile_preset_label' | translate}}"
+        data-description="{{ :: 'pci_app_submit_select_image_tile_preset_description' | translate}}"
+        data-values="[false]"
+    >
+    </oui-select-picker>
+</div>
+
+<!-- Preset Image -->
+<div class="container-fluid px-0" data-ng-if="!$ctrl.showAdvancedImage">
+    <p
+        class="mb-1"
+        data-translate="pci_app_submit_select_image_preset_info"
+    ></p>
     <div class="row">
-        <div
-            class="col-md-6 col-xl-4 my-3"
-            data-ng-repeat="preset in $ctrl.presets | filter:{type: $ctrl.type} track by preset.id "
+        <oui-select-picker
+            class="d-inline-block col-md-6 col-xl-3 my-3"
+            data-ng-repeat="preset in $ctrl.presets track by preset.id"
+            data-name="{{:: preset.id}}"
+            data-picture="{{:: preset.logoUrl}}"
+            data-model="$ctrl.preset"
+            data-on-change="$ctrl.onPresetSelect(preset)"
+            data-values="[preset]"
+            data-variant="light"
+            data-required
         >
-            <oui-select-picker
-                class="full-height"
-                data-name="{{:: preset.id }}"
-                data-model="$ctrl.selected"
-                data-on-change="$ctrl.onPresetSelect(preset)"
-                data-picture="{{:: preset.logoUrl }}"
-                data-label="{{:: preset.name }}"
-                data-variant="light"
-                data-values="[preset]"
-            >
-                <oui-select-picker-section
-                    data-ng-repeat="desc in preset.descriptions track by $index"
-                    class="oui-select-picker__section"
+            <oui-select-picker-label>
+                <div class="d-flex flex-column">
+                    <span data-ng-bind=":: preset.name"></span>
+                    <small data-ng-bind=":: preset.partnerName"></small>
+                </div>
+            </oui-select-picker-label>
+            <oui-select-picker-section>
+                <oui-select
+                    data-items="preset.versions"
+                    data-model="preset.selectedVersion"
+                    data-name="{{ preset.name + 'versions' }}"
+                    data-disabled="preset.versions.length === 1"
                 >
-                    {{ ::desc }}
-                </oui-select-picker-section>
-                <oui-select-picker-section class="oui-select-picker__section">
-                    <a
-                        target="_blank"
-                        class="oui-button oui-button_ghost"
-                        data-ng-href="{{::docUrl.url}}"
-                        rel="noopener"
-                        data-ng-repeat="docUrl in preset.docUrl track by $index"
-                    >
-                        <span>{{ ::docUrl.name }}</span>
-                        <span
-                            class="oui-icon oui-icon-external-link"
-                            aria-hidden="true"
-                        ></span>
-                    </a>
-                </oui-select-picker-section>
-                <oui-select-picker-section>
+                    <span data-ng-bind="$item"></span>
+                </oui-select>
+            </oui-select-picker-section>
+            <oui-select-picker-section>
+                <p data-ng-bind=":: preset.description" class="mb-2"></p>
+                <a
+                    data-ng-href="{{::preset.docUrl}}"
+                    target="_blank"
+                    rel="noopener"
+                >
+                    <span>Documentation</span>
                     <span
-                        data-ng-if="preset.priceInUcents > 0"
-                        data-translate="pci_app_submit_select_start_from"
+                        class="oui-icon oui-icon-external-link"
+                        aria-hidden="true"
                     ></span>
+                </a>
+            </oui-select-picker-section>
+            <oui-select-picker-section>
+                <div>
+                    <span>Prix CPU : </span>
                     <ovh-manager-catalog-price
-                        data-price="preset.priceInUcents * 60"
-                        data-tax="preset.tax * 60"
+                        data-price="preset.prices.cpu.priceInUcents * 60"
+                        data-tax="preset.prices.cpu.tax * 60"
                         data-user="$ctrl.user"
-                        data-show-zero-price="true"
-                        data-interval="'hour'"
                     >
                     </ovh-manager-catalog-price>
-                </oui-select-picker-section>
-            </oui-select-picker>
-        </div>
+                    <span>{{preset.licensing}}/heure</span>
+                </div>
+                <div>
+                    <span>Prix GPU : </span>
+                    <ovh-manager-catalog-price
+                        data-price="preset.prices.gpu.priceInUcents * 60"
+                        data-tax="preset.prices.gpu.tax * 60"
+                        data-user="$ctrl.user"
+                    >
+                    </ovh-manager-catalog-price>
+                    <span>{{preset.licensing}}/heure</span>
+                </div>
+            </oui-select-picker-section>
+        </oui-select-picker>
+    </div>
+    <!-- Partner conditions-->
+    <div data-ng-if="$ctrl.preset">
+        <!-- cb -->
+        <oui-checkbox
+            data-ng-if="!$ctrl.preset.partner.contract.signedAt"
+            data-model="$ctrl.partnerConditionsAccepted"
+            data-name="checkbox-partner"
+        >
+            <span
+                data-translate="pci_app_submit_select_image_preset_conditions_checkbox"
+            ></span>
+        </oui-checkbox>
+        <!-- cb disabled-->
+        <oui-checkbox
+            data-ng-if="$ctrl.preset.partner.contract.signedAt"
+            data-model="true"
+            data-name="checkbox-partner-disabled"
+            data-disabled="true"
+        >
+            <span>
+                J'ai lu et accepté les conditions le
+                {{$ctrl.preset.partner.contract.signedAt | date}}
+            </span>
+        </oui-checkbox>
+        <!--ToS link -->
+        <a data-ng-href="{{$ctrl.getToSLink()}}" target="_blank" rel="noopener">
+            <span
+                data-translate="pci_app_submit_select_image_preset_conditions_link"
+            ></span>
+            <span
+                class="oui-icon oui-icon-external-link mb-4"
+                aria-hidden="true"
+            ></span>
+        </a>
     </div>
 </div>
-<button
-    class="oui-button sizing__advanced-button oui-button_ghost mb-3"
-    oui-tooltip="{{:: 'pci_app_submit_select_image_advanced_tips' | translate  }}"
-    oui-tooltip-placement="top"
-    type="button"
-    data-ng-click="$ctrl.onClickAdvancedImage()"
-    data-ng-if="$ctrl.presets.length > 0"
->
-    <span data-translate="pci_app_submit_select_image_advanced"></span>
-</button>
 
-<div data-ng-if="$ctrl.showAdvancedImage || $ctrl.presets.length === 0">
+<!-- Custom image -->
+<div data-ng-if="$ctrl.showAdvancedImage">
     <p data-translate="pci_app_submit_select_image_tips"></p>
     <oui-message data-type="info">
         <div class="d-flex flex-column">
@@ -74,16 +140,12 @@
                 ></li>
                 <li
                     data-translate="pci_app_submit_select_image_info_message_2"
-                    data-translate-values="{ 'architectures': '<strong>(linux/AMD64)</strong>' }"
+                    data-translate-values="{ 'architectures': '<strong>	&lsquo;linux/amd64&rsquo;</strong>' }"
                 ></li>
                 <li
                     data-translate="pci_app_submit_select_image_info_message_3"
                 ></li>
             </ul>
-            <code class="my-2 ml-4 oui-background-p-800 oui-color-p-050"
-                >RUN chown -R 42420:42420 /workspace<br />ENV
-                HOME=/workspace</code
-            >
             <div>
                 <span
                     data-translate="pci_app_submit_select_image_info_custom_doc"
