--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dedicatedCloud.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dedicatedCloud.html
@@ -70,18 +70,23 @@
     <div>
         <div data-ovh-alert="dedicatedCloud"></div>
 
-        <oui-message class="mb-1" type="info" ng-if="$ctrl.surveyUrl">
-            <span data-translate="dedicatedCloud_survey"></span>
+        <oui-message
+            class="mb-3"
+            data-type="info"
+            data-ng-if="$ctrl.newProductUrl"
+        >
+            <span data-translate="dedicatedCloud_banner_new_product"></span>
             <a
-                data-ng-href="{{ $ctrl.surveyUrl }}"
-                data-track-on="click"
-                data-track-name="alert::hpc::go-to-hpc-survey"
+                data-ng-href="{{ $ctrl.newProductUrl }}"
                 target="_blank"
                 rel="noopener"
             >
-                <span data-translate="dedicatedCloud_survey_link"></span>
+                <span
+                    data-translate="dedicatedCloud_banner_new_product_link"
+                ></span>
             </a>
         </oui-message>
+
         <div data-ui-view="pccView"></div>
     </div>
 </div>
