feat(generator): add translations in generator corresponding to template
ref: MANAGER-11306

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/packages/manager/core/generator/app/conditional-templates/dashboard/index.tsx.hbs
+++ b/packages/manager/core/generator/app/conditional-templates/dashboard/index.tsx.hbs
@@ -24,7 +24,7 @@ export function loader(params: any) {
 }
 
 export default function Dashboard() {
-  const { t } = useTranslation('{{appName}}');
+  const { t } = useTranslation('{{appName}}/dashboard');
    const data = useLoaderData() as Record<string, unknown>;
 
   return (
