--- a/packages/manager/core/generator/app/conditional-templates/listing/index.tsx.hbs
+++ b/packages/manager/core/generator/app/conditional-templates/listing/index.tsx.hbs
@@ -18,7 +18,7 @@ export function loader() {
 }
 
 export default function Listing() {
-  const { t } = useTranslation('{{appName}}');
+  const { t } = useTranslation('{{appName}}/listing');
   const data = useLoaderData() as Record<string, unknown>;
 
   return (
