fix(storages.cold-archive): generate user + cred on enter button
ref: DTRSD-112315

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
@@ -123,7 +123,9 @@
                     class="oui-input mr-2"
                     type="text"
                     name="username"
+                    data-ng-disabled="$ctrl.userModel.createMode.isInProgress"
                     data-ng-model="$ctrl.userModel.createMode.description"
+                    data-ng-keyup="$ctrl.onCreateUserClicked($ctrl.userModel.createMode.description, $event)"
                     required
                 />
                 <oui-spinner
