fix(pci.storages.cold-archive): generate cred if user has not
ref: DTRSD-112313

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
@@ -52,6 +52,7 @@
                     data-match="userNameDescriptionKey"
                     data-name="userNameDescriptionKey"
                     data-model="$ctrl.userModel.linkedMode.selected"
+                    data-on-change="$ctrl.onUserSelected(modelValue)"
                 >
                     <div class="row">
                         <div
@@ -97,7 +98,7 @@
                 ></span>
             </oui-button>
 
-            <!--Linked btn-->
+            <!--Linked btn in case the credetial is generated-->
             <oui-button
                 data-variant="secondary"
                 data-disabled="!$ctrl.canGenerateS3CredentialModeLinked()"
