feat(component.react-nasha): add bootstrap
ref:MANAGER-11307

Signed-off-by: stif59100 <steeve.vanderstocken@ovhcloud.com>

--- a/packages/manager/apps/nasha-react/src/pages/index.scss
+++ b/packages/manager/apps/nasha-react/src/pages/index.scss
@@ -4,4 +4,10 @@ ul {
 
 .panelInfos {
   display: table-cell;
+  vertical-align: top;
+}
+
+.tabsDashboard {
+  border: 1px solid #e6e6e6;
+  border-radius: 6px;
 }
