fix(pcc.vmware): change onboarding US content and tile content
ref: MANAGER-11230

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/nsxt.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/nsxt.html
@@ -1,5 +1,5 @@
-<dl class="oui-description">
-    <dt>
+<dl class="oui-tile__definition">
+    <dt class="oui-tile__term">
         <span
             data-translate="{{:: 'ovhManagerPccDashboardOptionsNsxt_name' }}"
         ></span>
