--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/basic-option.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/basic-option.html
@@ -1,7 +1,9 @@
-<dl class="oui-description">
-    <dt
-        data-translate="{{:: 'ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_' + $ctrl.optionName }}"
-    ></dt>
+<dl class="oui-tile__definition">
+    <dt class="oui-tile__term">
+        <p
+            data-translate="{{:: 'ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_' + $ctrl.optionName }}"
+        ></p>
+    </dt>
     <dd>
         <p
             data-ng-if="$ctrl.eol"
