--- a/packages/manager/core/generator/app/templates/package.json.hbs
+++ b/packages/manager/core/generator/app/templates/package.json.hbs
@@ -15,7 +15,9 @@
     "dev": "tsc && vite",
     "start": "lerna exec --stream --scope='{{ packageName }}' --include-dependencies -- npm run build --if-present",
     "start:dev": "lerna exec --stream --scope='{{ packageName }}' --include-dependencies -- npm run dev --if-present",
-    "start:watch": "lerna exec --stream --parallel --scope='{{ packageName }}' --include-dependencies -- npm run dev:watch --if-present"
+    "start:watch": "lerna exec --stream --parallel --scope='{{ packageName }}' --include-dependencies -- npm run dev:watch --if-present",
+    "test:dev": "cypress open",
+    "test:e2e": "tsc && node ../../../../scripts/run-cypress.js"
   },
   "dependencies": {
     "@ovh-ux/manager-core-api": "*",
@@ -31,7 +33,8 @@
     "vite": "^3.0.2"
   },
   "peerDependencies": {
-    "i18next": "^20.4.0"
+    "i18next": "^20.4.0",
+    "cypress": "*"
   },
   "regions": [
     "CA",
