feat(iam): delay cursors update
ref: MANAGER-11189
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/policies/policies.template.html
+++ b/packages/manager/modules/iam/src/components/policies/policies.template.html
@@ -2,8 +2,8 @@
     <oui-datagrid
         id="{{ $ctrl.datagridId }}"
         data-rows-loader="$ctrl.getItems($config)"
-        data-page="{{ $ctrl.cursors.index }}"
-        data-page-size="100"
+        data-page="{{ $ctrl.cursors.index || 1 }}"
+        data-page-size="{{ $root.IAM.PAGE_SIZE }}"
         data-pagination-mode="arrows"
     >
         <!-- <Columns> -->
