--- a/packages/manager/apps/nasha-react/src/pages/index.scss
+++ b/packages/manager/apps/nasha-react/src/pages/index.scss
@@ -1,35 +1,41 @@
-ul {
-  list-style-type: none;
+.elementTileLeft {
+  align-items: flex-start;
 }
 
-.col {
-  border: 1px solid #e6e6e6;
-  border-radius: 6px;
-  flex: 3;
-  margin: 15px;
-}
-.element {
-  margin: 15px;
-}
-.chipDashboard {
-  float: right;
-  margin-left: 10px;
+.elementTileRight {
+  align-items: flex-end;
 }
 
-.row {
+.buttonTooltipDashboard {
   display: flex;
+  justify-content: space-between;
 }
 
-button {
-  color: #0050d7;
+.tooltip {
+  position: relative;
+  display: inline-block;
+  left: -80%;
+}
+
+.tooltip .tooltiptext {
+  position: absolute;
   background-color: #fff;
-  border-color: #0050d7;
-  min-width: 1rem;
-  width: 1.5rem;
-  height: 1.5rem;
-  line-height: 1.5rem;
-  padding: 0;
-  overflow: visible;
-  border-radius: 100%;
-  cursor: pointer;
+  border-radius: 4px;
+  white-space: nowrap;
+  margin-top: -4px;
+  right: -100%;
+  border: 2px solid #e6e6e6;
+  text-align: left;
+  z-index: 9999;
+}
+
+.tile-content {
+  display: block;
+  width: 100%;
+}
+
+.dashboard-section {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
 }
