feat(pci): add cross border payment sentence for TN/SA/MN
ref: MANAGER-11389

Signed-off-by: David Arsène <david.arsene.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/new/payment/components/add/index.html
+++ b/packages/manager/modules/pci/src/projects/new/payment/components/add/index.html
@@ -44,6 +44,10 @@
         <span
             data-translate="pci_project_new_payment_method_add_credit_card_info_part_2"
         ></span>
+        <p
+            data-ng-if="$ctrl.hasSpecificCrossBorderSentenceForCardPayment"
+            data-translate="pci_project_new_payment_method_add_credit_card_info_part_3"
+        ></p>
     </oui-message>
 
     <!--PAYPAL charged tax info banner-->
