--- a/packages/manager/modules/pci/src/projects/project/storages/components/field-clipboard/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/components/field-clipboard/template.html
@@ -1,18 +1,19 @@
-<oui-field class="d-inline" data-label="{{:: $ctrl.fieldSecretKeyLabel }}">
+<oui-field class="d-inline" data-label="{{:: $ctrl.fieldKeyLabel }}">
     <div class="mb-0 oui-input-overlay oui-clipboard">
         <input
             class="oui-input oui-clipboard__control"
-            data-ng-attr-id="{{:: $ctrl.SECRET_KEY_INPUT_ID}}"
-            data-ng-attr-name="{{:: $ctrl.SECRET_KEY_INPUT_ID}}"
+            data-ng-attr-id="{{:: $ctrl.fieldName}}"
+            data-ng-attr-name="{{:: $ctrl.fieldName}}"
             data-ng-attr-type="{{ $ctrl.shouldDisplayPasswordInput? 'text' : 'password' }}"
-            data-ng-value="$ctrl.fieldSecretKeyValue"
+            data-ng-value="$ctrl.fieldKeyValue"
             readonly
         />
         <button
             type="button"
             class="oui-button mr-4"
+            data-ng-if="$ctrl.isDisplayableShowHidePasswordBtn"
             aria-label="{{ $ctrl.getPasswordLabel($ctrl.shouldDisplayPasswordInput) }}"
-            data-ng-click="$ctrl.shouldDisplayPasswordInput = !$ctrl.shouldDisplayPasswordInput"
+            data-ng-click="$ctrl.onShowHidePasswordClick()"
         >
             <span
                 aria-hidden="true"
@@ -25,7 +26,7 @@
             aria-label="{{:: 'pci_projects_project_storages_components_password_clipboard_label_copy_to_clipboard' | translate }}"
             data-ng-if="$ctrl.model.clipboard"
             data-ng-attr-id="{{:: $ctrl.SECRET_KEY_CLIPBOARD_BTN_ID}}"
-            data-clipboard-text="{{:: $ctrl.fieldSecretKeyValue}}"
+            data-clipboard-text="{{:: $ctrl.fieldKeyValue}}"
             data-oui-tooltip="{{ $ctrl.model.tooltipText }}"
             data-ng-click="$ctrl.onClipboardClick()"
         >
