--- a/packages/manager/core/generator/app/templates/package.json.hbs
+++ b/packages/manager/core/generator/app/templates/package.json.hbs
@@ -2,7 +2,7 @@
   "name": "{{ packageName }}",
   "version": "0.0.0",
   "description": "{{ description }}",
-  "private": "true",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ovh/manager.git",
