feat(dedicated.nasha): dynamic columns from JSON
ref: MANAGER-11382

--- a/packages/manager/apps/nasha-react/src/components/layout-helpers/list/dataGrid.scss
+++ b/packages/manager/apps/nasha-react/src/components/layout-helpers/list/dataGrid.scss
@@ -12,9 +12,14 @@ table {
     background-color: #fff;
     border: 1px solid #bef1ff;
     border-collapse: collapse;
+    cursor: pointer;
   }
 
   td {
     padding: 15px;
+  }
+
+  tr:hover {
+    background-color: #b0dfec;
   }
 }
