feat: add onboarding page template on the generator
ref: MANAGER-11383

Signed-off-by: Nicolas Pierre-charles <nicolas@nicode.fr>

--- a/packages/manager/core/generator/app/templates/src/index.tsx.hbs
+++ b/packages/manager/core/generator/app/templates/src/index.tsx.hbs
@@ -1,3 +1,4 @@
 import { startApplication } from '@ovh-ux/manager-react-core-application';
+import '@ovhcloud/ods-theme-blue-jeans/index.css';
 
 startApplication('{{ appName }}');
