--- a/packages/manager/core/generator/app/templates/package.json.hbs
+++ b/packages/manager/core/generator/app/templates/package.json.hbs
@@ -21,6 +21,11 @@
     "@ovh-ux/manager-core-api": "*",
     "@ovh-ux/manager-react-core-application": "*",
     "@tanstack/react-query": "^4.29.3",
+    "@ovhcloud/ods-core": "^12.1.0",
+    "@ovhcloud/ods-stencil": "^12.1.0",
+    "@ovhcloud/ods-theme-blue-jeans": "^12.1.0",
+    "@ovhcloud/ods-theming": "^12.1.0",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-i18next": "^11.18.1",
     "react-router-dom": "^6.3.0"
